# gear

./: .ethexe.example.local.toml  .ethexe.example.toml  .gitattributes  .gitignore  .gitmodules  .graphify_python  .hypercore.toml  .ignore  .rust-analyzer.toml  AGENTS.md  CLAUDE.md  CNAME  CONTRIBUTING.md  Cargo.lock.orig  Cargo.toml  Cargo.toml.orig  DEVELOPMENT.md  EFFICIENCY_REPORT.md  EXAMPLES.md  HEADER-GPL3  Makefile  Makefile.toml  POLKADOT_UPSTREAM_2409_PROOF.md  README.md  THIRD_PARTY_NOTICES.md  TODOS.md  _typos.toml  a.diff  build.bat  build.rs  cliff.toml  codecov.yml  corner-case-hunt-log.md  crates.js  docker-compose-ethexe-node-loader.yml  docker-compose.yml  dump.json  flake.nix  help.html  index.html  (+25 more)
btest/: Cargo.toml
btest/src/: lib.rs
collator/: Cargo.toml  README.md
collator/cli/: Cargo.toml
collator/service/: Cargo.toml
collator/src/: main.rs
common/: Cargo.toml
common/codegen/: Cargo.toml
common/lazy-pages/: Cargo.toml
common/numerated/: Cargo.toml
common/src/: benchmarking.rs  code_storage.rs  event.rs  exit.rs  lazy_pages.rs  lib.rs  memory_dump.rs  message_queue.rs  native.rs  pallet_tests.rs  pause.rs  paused_program_storage.rs  program_storage.rs  scheduler.rs  storage_queue.rs  traits.rs  value_tree.rs
core/: Cargo.toml
core-backend/: Cargo.toml
core-backend/codegen/: Cargo.toml
core-backend/common/: Cargo.toml
core-backend/sandbox/: Cargo.toml
core-backend/src/: accessors.rs  env.rs  error.rs  funcs.rs  lib.rs  log.rs  memory.rs  mock.rs  runtime.rs  state.rs  tests.rs
core-backend/wasmi/: Cargo.toml
core-backend/wasmtime/: Cargo.toml
core-errors/: Cargo.toml  signal-code-testing.md
core-errors/src/: lib.rs  simple.rs
core-processor/: Cargo.toml
core-processor/src/: charger.rs  code.rs  common.rs  configs.rs  context.rs  executor.rs  ext.rs  handler.rs  id.rs  lazy_pages.rs  lib.rs  precharge.rs  precharger.rs  preparing.rs  processing.rs  processor.rs  tests.rs
core-processor/tests/: codes_display_len.rs  simple_errors_len.rs
core-runner/: Cargo.toml
core-runner/src/: builder.rs  ext.rs  lib.rs  runner.rs  util.rs
core/errors/: Cargo.toml  signal-code-testing.md
core/gprimitives/: Cargo.toml
core/processor/: Cargo.toml
core/sandbox/: README.md
core/src/: 'message.rs  bounds.rs  buffer.rs  checked_code.rs  code.rs  code_hash.rs  constants.rs  costs.rs  crypto.rs  env.rs  env_vars.rs  exec_settings.rs  ext.rs  gas.rs  identifiers.rs  ids.rs  lazy_pages.rs  lib.rs  limits.rs  memory.rs  message.rs  pages.rs  percent.rs  program.rs  reservation.rs  rpc.rs  storage.rs  str.rs  tasks.rs  tree.rs  util.rs
core/wasmer-cache/: Cargo.toml
demo-chat/: Cargo.toml
demo-chat/bot/: Cargo.toml
demo-chat/room/: Cargo.toml
demo-chat/src/: bot.rs  encode.rs  lib.rs  room.rs  shared.rs
demo-ping/: Cargo.toml
demo-ping/src/: lib.rs  main.rs
examples/: Cargo.toml  README.md
examples/.cargo/: config.toml
examples/alloc-test/: Cargo.toml
examples/async-critical/: Cargo.toml
examples/async-custom-entry/: Cargo.toml
examples/async-init/: Cargo.toml
examples/async-multisig/: Cargo.toml
examples/async-recursion/: Cargo.toml
examples/async-reply-hook/: Cargo.toml  build.rs
examples/async-sign/: Cargo.toml
examples/async-signal-entry/: Cargo.toml
galloc/: Cargo.toml  README.md  all.html  index.html  sidebar-items.js  static.ALLOC.html
gbuiltin/: Cargo.toml  README.md
gcli/: Cargo.toml  README.md  build.rs
gclient/: Cargo.toml  all.html  enum.DispatchStatus.html  enum.Error.html  enum.Event.html  enum.GearEvent.html  fn.bank_address.html  fn.code_from_os.html  fn.hex_to_vec.html  fn.now_micros.html  fn.wasm_target.html  fn.wat2wasm.html  index.html  sidebar-items.js  struct.EventListener.html  struct.GearApi.html  struct.WSAddress.html  trait.EventProcessor.html  type.Result.html
gcore/: Cargo.toml  README.md  all.html  build.rs  index.html  macro.debug.html  sidebar-items.js  struct.ActorId.html  struct.CodeHash.html  struct.CodeId.html  struct.EnvVars.html  struct.GasMultiplier.html  struct.MessageHandle.html  struct.MessageId.html  struct.Percent.html  struct.ReservationId.html  struct.Ss58Address.html  type.BlockCount.html  type.BlockNumber.html  type.Gas.html  type.Value.html
gcore-primitives/: Cargo.toml
gear-backend/: Cargo.toml
gear-runner/: Cargo.toml
gear-test/: Cargo.toml  README.md
gear-test-lib/: Cargo.toml
gmeta/: Cargo.toml  all.html  enum.LanguageId.html  enum.MetadataParseError.html  index.html  struct.MetaType.html  struct.MetadataRepr.html  struct.MetawasmData.html  struct.PortableRegistry.html  struct.Registry.html  struct.TypesRepr.html  trait.Metadata.html  trait.Type.html  trait.Types.html  type.In.html  type.InOut.html  type.Out.html
gnc/: Cargo.toml
gprimitives/: Cargo.toml
gsdk/: Cargo.toml  HOW-TO-UPDATE.md  README.md  all.html  build.rs  enum.Program.html  index.html  sidebar-items.js  struct.Api.html  struct.ApiBuilder.html  struct.GasInfo.html  struct.Value.html  type.BlockNumber.html  type.GearGasNode.html  type.GearGasNodeId.html  type.GearPages.html  type.TxInBlock.html  type.TxInBlockResult.html  type.TxStatus.html  vara_runtime.scale
gsigner/: CLI.md  Cargo.toml  README.md
gstd/: Cargo.toml  README.md  all.html  attr.async_init.html  attr.async_main.html  constant.SYSTEM_RESERVE.html  fn.handle_reply_with_hook.html  fn.handle_signal.html  fn.message_loop.html  fn.record_reply.html  index.html  macro.actor_id.html  macro.bail.html  macro.dbg.html  macro.debug.html  macro.export.html  macro.heap_debug.html  macro.metadata.html  macro.static_mut.html  macro.static_ref.html  sidebar-items.js  struct.ActorId.html  struct.CodeHash.html  struct.CodeId.html  struct.Config.html  struct.EnvVars.html  struct.GasMultiplier.html  struct.MessageId.html  struct.Percent.html  struct.Reservation.html  struct.ReservationId.html  struct.Reservations.html  struct.Ss58Address.html  trait.ReservationIdExt.html  type.BlockCount.html  type.BlockNumber.html  type.Gas.html  type.Value.html
gstd-meta/: Cargo.toml
gsys/: Cargo.toml
(+74401 files in other folders)
